# Kpibot

./: .gitignore  .pre-commit-config.yaml  APP_cli.py  DAT_Data_download.py  LIV_PaperWorker.py  RSH_Scenarios.py  RSH_TimeSeriesCV.py  TRN_Train.py  ZZ_PRUEBA.py  [APP]_cli.py  [DAT]_Data_download.py  [LIV]_PaperWorker.py  [RSH]_Scenarios.py  [RSH]_TimeSeriesCV.py  [TRN]_Train.py  best_params.json  config.yaml  mlflow.db  pyproject.toml  settings.py
.github/workflows/: ci.yml  release.yml
02_models/A/: pipeline.pkl
02_models/AAPL/: pipeline.pkl
02_models/ABBV/: pipeline.pkl
02_models/ABNB/: pipeline.pkl
02_models/ABT/: pipeline.pkl
02_models/ACN/: pipeline.pkl
02_models/ADBE/: pipeline.pkl
02_models/ADI/: pipeline.pkl
02_models/AEE/: pipeline.pkl
02_models/AEP/: pipeline.pkl
02_models/AES/: pipeline.pkl
OPS_scripts/: backtest.ps1  backtest.sh  cv.ps1  dashboard.ps1  dashboard.sh  fmt.ps1  lint.ps1  lint.sh  prep.ps1  train.sh  worker.ps1  worker.sh
Z_Archive/: 02_model_research.py  03_backtest_validator_app.py
[CFG]_config/: Eurostoxx_tickers.txt  sp500_tickers.txt  top_100_robustos.txt
[LOG]_logs/: env_versions.json
[OPS]_scripts/: cv.sh  fmt.sh  prep.sh  train.ps1
apps/: APP_cuadro_mando.py  launch_cuadro_mando.bat
artifacts/: debug_bt_input.json  debug_bt_output_summary.json  metrics.json
config/: best_run_GOOG.txt  config_manager.py  migrate_to_unified_config.py  one.txt  phibot.yaml  settings.py.backup
cv/: cv_xgb.json
engine/: backtest_runner.py  broker.py  data_handlers.py  events.py  features.py  metrics.py  portfolio.py  runs_extractor.py  strategy.py
examples/: logging_migration_examples.py
scripts/: migrate_to_structured_logging.py
tests/: conftest.py  test_atr_dynamic.py  test_config_system.py  test_e2e_minimal.py  test_features.py  test_labels.py  test_logging_system.py  test_splitter.py  test_thresholds.py
tools/: MIG_dataset_to_dat_data.py
utils/: 00_File_utils.py  A_data_loader.py  B_feature_engineering.py  C_label_generator.py  D_backtest_utils.py  E_download_all_tickers.py  F_download_all_tickers_FOR.py  FeatureBuilder.py  __init__.py  build_pipeline.py  data_update.py  ib_connection.py  io_utils.py  logging_cfg.py  logging_enhanced.py  mlflow_utils.py  parquet_store.py  reproducibility.py  schemas.py  threshold_sweep.py  time_utils.py  tscv.py
z_Documentacion/: 06_dashboard.py  LOGGING_GUIDE.MD  PHIBOT_backlog_integrado.xlsx  Plan_desarrollo.xlsx
(+23859 files in other folders)
